@@ -1,2 +1,3 @@
 # 2.0.9
 - Remember currently selected wonder on home page
+- EventsView: switch to two-column layout at aspect ratios > .85
